--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "classnames": "^2.3.2",
     "next": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "sass": "^1.68.0"
   },
   "devDependencies": {
     "@types/node": "latest",
